@@ -1,3 +1,10 @@
+Fri Oct 10 19:29:57 UTC 2008  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/InfoRepo/DCPSInfoRepoServ.h:
+        * dds/InfoRepo/DCPSInfoRepoServ_Export.h:
+
+          Added Export macros for GCC 4.x and Windows builds.
+
 Fri Oct 10 19:09:50 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * dds/InfoRepo/DCPSInfoRepo.cpp:
